--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "discojs": "^2.0.0",
+    "bottleneck": "^2.19.5",
+    "cross-fetch": "^3.0.6",
+    "eslint-config-prettier": "^7.2.0",
+    "io-ts": "^2.2.13",
+    "oauth-1.0a": "^2.2.6",
+    "prettier": "^2.2.1",
+    "querystring": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
