--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "eslint-config-prettier": "^7.2.0",
     "io-ts": "^2.2.13",
     "oauth-1.0a": "^2.2.6",
-    "prettier": "^2.2.1",
     "querystring": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
