--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^4.6.0",
     "bottleneck": "^2.19.5",
     "cross-fetch": "^3.0.6",
     "eslint-config-prettier": "^7.2.0",
